--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.12",
+    "mdb-react-ui-kit": "^7.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
