--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
