--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App(FrontEnd)",
-  "name": "Create React App Sample",
+  "short_name": "Nostalgia(FrontEnd)",
+  "name": "Nostalgia-Back to childhood",
   "icons": [
     {
       "src": "favicon.ico",
