--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.12",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
