--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34"
