--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.2.0",
     "moment": "^2.29.4",
+    "peerjs": "^1.5.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
